Fixed scrollbar bugs.

--- a/src/scrollbarContainer.css
+++ b/src/scrollbarContainer.css
@@ -1,11 +1,16 @@
-.App::-webkit-scrollbar {
-  width: 80px;
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
 }
 
-.App::-webkit-scrollbar-track {
-  background-color: darkgrey;
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
 }
 
-.App::-webkit-scrollbar-thumb {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #c7a17a;
+  border-radius: 10px;
 }
